<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/nfc_read_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/nfc_read_button" />

        <Button
            android:id="@+id/nfc_write_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_write_button" />

        <EditText
            android:id="@+id/nfc_read_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nfc_read_edittext" />

        <EditText
            android:id="@+id/nfc_write_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nfc_write_edittext" />

        <EditText
            android:id="@+id/nfc_error_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nfc_error_edittext" />

        <Button
            android:id="@+id/mqtt_supply_chain_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mqtt_supply_chain_button" />

        <EditText
            android:id="@+id/mqtt_error_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/mqtt_error_edittext" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>